--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,3 +1,4 @@
+
 @import "../styles/mixins.scss";
 @import "../styles/variables.scss";
 
@@ -10,8 +11,6 @@
   }
   &top {
     &-menu {
-      margin-right: 123px;
-      margin-top: 70px;
       height: 12px;
       width: 18px;
 
@@ -23,22 +22,12 @@
     }
   }
 }
-
-@media (min-width: 744px) {
+@media (min-width: 322px) {
   .header__ {
     &container {
-      height: 800px;
-      background-position: top 0px left -360px;
-    }
-  }
-}
+      height: 500px;
+      background-position: top 0px left -250px;
 
-@media (min-width: 1260px) {
-  .header__ {
-    &container {
-      height: 720px;
-      background-position: center;
-      background-size: 100%;
     }
     &top {
       &-box {
@@ -46,14 +35,166 @@
         justify-content: space-between;
       }
       &-logo {
-        padding-left: 120px;
+        padding-left: 30px;
+        padding-top: 30px;
+        height: 16px;
+        width: 127px;
+      }
+      &-menu {
+        margin-right: 30px;
+        margin-top: 30px;
+        height: 12px;
+        width: 18px;
+
+        background-image: url("../img/menu.png");
+        background-repeat: no-repeat;
+        &:hover {
+          background-image: url("../img/menuHover.png");
+        }
+      }
+    }
+    &bottom {
+      &-sound {
+        margin-left: 36px;
+        margin-top: 320px;
+        &-img {
+          height: 32px;
+          width: 32px;
+        }
+      }
+      &-title {
+        font-family: Inter;
+        font-size: 32px;
+        font-style: italic;
+        font-weight: 800;
+        line-height: 32px;
+        letter-spacing: -1.5px;
+        text-align: left;
+        
+        margin-left: 20px;
+        margin-top: 20px;
+      }
+    }
+  }
+}
+
+@media (min-width: 624px) {
+  .header__ {
+    &container {
+      height: 800px;
+      background-position: top 0px left -360px;
+    }
+    &top {
+      &-menu {
+        margin-right: 123px;
+        margin-top: 70px;
+      }
+      &-box {
+        display: flex;
+        justify-content: space-between;
+      }
+      &-logo {
+        padding-left: 60px;
         padding-top: 64px;
+      }
+      &-menu {
+        margin-right: 80px;
+        margin-top: 70px;
+        height: 12px;
+        width: 18px;
+
+        background-image: url("../img/menu.png");
+        background-repeat: no-repeat;
+        &:hover {
+          background-image: url("../img/menuHover.png");
+        }
+      }
+    }
+    &bottom {
+      &-sound {
+        margin-left: 50px;
+        margin-top: 480px;
+      }
+      &-title {
+        font-family: Inter;
+        font-size: 40px;
+        font-style: italic;
+        font-weight: 800;
+        line-height: 40px;
+        letter-spacing: -1.5px;
+        text-align: left;
+        margin-left: 50px;
+        margin-top: 50px;
+      }
+    }
+  }
+}
+
+
+@media (min-width: 1040px) {
+  .header__ {
+    &container {
+      position: relative;
+       top: -10px;
+      height: 100%;
+      background-position: center;
+      background-size: 100%;
+    }
+    &top {
+      &-box {
+       
+        display: flex;
+        justify-content: space-between;
+      }
+      &-logo {
+        padding-left: 120px;
+       
       }
     }
     &bottom {
       &-sound {
         margin-left: 120px;
         margin-top: 356px;
+      }
+      &-title {
+        margin-top: 40px;
+        margin-left: 120px;
+        font-family: Inter;
+        font-size: 48px;
+        font-style: italic;
+        font-weight: 800;
+        line-height: 48px;
+        letter-spacing: -1.5px;
+        text-align: left;
+      }
+    }
+  }
+}
+
+@media (min-width: 1040px) {
+  .header__ {
+    &container {
+      position: relative;
+       top: -10px;
+      height: 100%;
+      background-position: center;
+      background-size: 100%;
+    }
+    &top {
+      &-box {
+       
+        display: flex;
+        justify-content: space-between;
+      }
+      &-logo {
+        padding-left: 120px;
+       
+      }
+    }
+    &bottom {
+      &-sound {
+        margin-left: 120px;
+        margin-top: 340px;
       }
       &-title {
         margin-top: 40px;
