--- a/src/components/catalog/Catalog.scss
+++ b/src/components/catalog/Catalog.scss
@@ -1,2 +1,35 @@
 @import "../styles/mixins.scss";
 @import "../styles/variables.scss";
+
+.Catalog__{
+  &product-container{
+    display: flex;
+    justify-content: space-around ;
+    margin-top: 64px;
+    margin-left: 120px;
+    margin-right: 120px;
+  }
+  &title {
+    margin-top: 120px;
+    justify-content: center;
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 48px;
+    letter-spacing: -1.5px;
+    text-align: center;
+  
+  }
+}
+
+
+@media (max-with: 1040px){
+    .Catalog__{
+      &product-container{
+        display: flex;
+        justify-content: space-around ;
+        margin-top: 64px;
+      }
+    }
+}
+
