--- a/src/components/styles/mixins.scss
+++ b/src/components/styles/mixins.scss
@@ -1,4 +1,4 @@
-@mixin DTSmedium () {
+@mixin DTMedium() {
   font-family: Inter;
   font-size: 16px;
   font-weight: 700;
@@ -8,22 +8,22 @@
   color: #292929;
 }
 
-@mixin DTTitle(){
-    font-family: Inter;
-font-size: 48px;
-font-weight: 700;
-line-height: 48px;
-letter-spacing: -1.5px;
-text-align: center;
-background: #292929;
+@mixin DTTitle() {
+  font-family: Inter;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: -1.5px;
+  text-align: center;
+  color: #292929;
 }
 
-@mixin DTSmall(){
-    font-family: Inter;
-font-size: 16px;
-font-weight: 400;
-line-height: 22px;
-letter-spacing: 0px;
-text-align: left;
-background: #292929;
+@mixin DTSmall() {
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #292929;
 }
