--- a/src/MainPage/MainPage.scss
+++ b/src/MainPage/MainPage.scss
@@ -4,7 +4,9 @@
 body {
   margin: 0px 0px 0px 0px;
 }
-
+.main__container {
+  width: 100%;
+}
 .buy__ {
   &container {
     display: flex;
@@ -15,7 +17,7 @@ body {
   &title {
     @include DTTitle;
     text-align: left;
-    margin-right: 111px
+    margin-right: 111px;
   }
   &description {
     &-list {
@@ -45,7 +47,43 @@ body {
     }
   }
 }
-.footer__photo{
+.footer__photo {
   width: 100%;
   margin-top: 120px;
+}
+
+@media (max-width: 1000px) {
+  .buy__ {
+    &container {
+      max-width: 650px;
+      margin-left: 50px;
+      margin-right: 30px;
+     
+    }
+    &title {
+      font-size: 35px;
+      margin-left: 50px;
+      
+      width: 450px;
+    }
+    &description-list {
+      font-size: 10px;
+    }
+  }
+}
+
+@media (max-width: 750px) {
+  .buy__ {
+    &container {
+      max-width: 650px;
+      margin-left: 50px;
+      margin-right: 30px;
+    }
+    &title {
+      font-size: 30px;
+    }
+    &description-list {
+      font-size: 10px;
+    }
+  }
 }
