--- a/src/components/catalog/Catalog.scss
+++ b/src/components/catalog/Catalog.scss
@@ -23,13 +23,20 @@
 }
 
 
-@media (max-with: 1040px){
-    .Catalog__{
-      &product-container{
-        display: flex;
-        justify-content: space-around ;
-        margin-top: 64px;
-      }
+@media (max-width: 1100px) {
+  .Catalog__{
+    &title{
+      padding-left: 26%;
+      padding-right: 22%;
     }
+    &product-container {
+      display: block;
+      flex-wrap: wrap;
+      padding-left: 23%;
+      padding-right: 25%;
+      
+    }
+  }
 }
+
 
