--- a/src/components/gallery/Gallery.scss
+++ b/src/components/gallery/Gallery.scss
@@ -1,5 +1,4 @@
-.gallery__{
- 
+.gallery__ {
   &title {
     font-family: Inter;
     font-size: 48px;
@@ -17,10 +16,38 @@
     margin-right: auto;
     width: 100%;
     display: flex;
-  justify-content: center;
+    justify-content: center;
   }
-   &container-img {
+  &container-img {
     display: flex;
     justify-content: center;
   }
 }
+
+@media (max-width: 1100px) {
+  .gallery__ {
+    &title{
+        display: flex;
+        justify-content: center;
+    }
+    &category-container {
+      max-width: 900px;
+      margin-left: 20px;
+      margin-right: 20px;
+    }
+  }
+}
+@media (max-width: 450px) {
+    .gallery__ {
+      &title{
+          display: flex;
+          justify-content: center;
+          margin-left: 25%;
+      }
+      &category-container {
+        max-width: 400px;
+        margin-left: 20px;
+        margin-right: 20px;
+      }
+    }
+  }
