--- a/src/components/gallery/category/Category.scss
+++ b/src/components/gallery/category/Category.scss
@@ -20,3 +20,65 @@
     margin-top: 16px;
   }
 }
+
+@media (max-width: 1100px) {
+    .Category__ {
+        &container{
+            margin-left: auto;
+            margin-right: auto;
+        }
+      &img-container {
+        max-width: 800px;
+        margin-left: 20px;
+        margin-right: 20px;
+      }
+      &img1, &img2{
+        max-height: 250px;
+      }
+      &description{
+        margin-left: 20px;
+      }
+    }
+  }
+
+  @media (max-width: 770px) {
+    .Category__ {
+        &container{
+            margin-left: auto;
+            margin-right: auto;
+        }
+      &img-container {
+        max-width: 500px;
+        margin-left: 20px;
+        margin-right: 20px;
+      }
+      &img1, &img2{
+        max-height: 150px;
+      }
+      &description{
+        margin-left: 20px;
+      }
+    }
+  }
+
+  @media (max-width: 450px) {
+    .Category__ {
+        &container{
+            margin-left: auto;
+            margin-right: auto;
+        }
+      &img-container {
+        max-width: 300px;
+        margin-left: 20px;
+        margin-right: 20px;
+      }
+      &img1, &img2{
+        max-height: 100px;
+      }
+      &description{
+        margin-left: 20px;
+      }
+    }
+  }
+  
+  
