--- a/src/MainPage/MainPage.scss
+++ b/src/MainPage/MainPage.scss
@@ -52,18 +52,16 @@ body {
   margin-top: 120px;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
   .buy__ {
     &container {
       max-width: 650px;
-      margin-left: 50px;
-      margin-right: 30px;
+      margin-left: 13%;
+      margin-right: 10%;
      
     }
     &title {
       font-size: 35px;
-      margin-left: 50px;
-      
       width: 450px;
     }
     &description-list {
@@ -72,18 +70,20 @@ body {
   }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 630px) {
   .buy__ {
     &container {
-      max-width: 650px;
-      margin-left: 50px;
-      margin-right: 30px;
+      max-width: 300px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      margin: 0;
     }
     &title {
-      font-size: 30px;
+      font-size: 20px;
     }
     &description-list {
-      font-size: 10px;
+      font-size: 8px;
     }
   }
 }
