--- a/src/components/catalog/Catalog.scss
+++ b/src/components/catalog/Catalog.scss
@@ -1,13 +1,18 @@
 @import "../styles/mixins.scss";
 @import "../styles/variables.scss";
 
-.Catalog__{
-  &product-container{
-    display: flex;
-    justify-content: space-around ;
-    margin-top: 64px;
-    margin-left: 120px;
-    margin-right: 120px;
+.Catalog__ {
+  &product {
+    &-container {
+      margin-top: 120px;
+    }
+    &-content-container {
+      display: flex;
+      justify-content: space-around;
+      margin-left: 5%;
+      margin-right: 5%;
+      margin-top: 50px;
+    }
   }
   &title {
     margin-top: 120px;
@@ -18,25 +23,93 @@
     line-height: 48px;
     letter-spacing: -1.5px;
     text-align: center;
-  
   }
 }
-
 
 @media (max-width: 1100px) {
-  .Catalog__{
-    &title{
-      padding-left: 26%;
-      padding-right: 22%;
+  .Catalog__ {
+    &container {
+      display: flex;
+      justify-content: center;
     }
-    &product-container {
-      display: block;
-      flex-wrap: wrap;
-      padding-left: 23%;
-      padding-right: 25%;
-      
+    &title {
+      margin-top: 80px;
+      display: inline;
+    }
+
+    &product {
+      &-container {
+        justify-content: center;
+        margin-top: 120px;
+      }
+      &-content-container {
+        display: block;
+        justify-content: space-around;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-top: 50px;
+      }
     }
   }
 }
 
+@media (max-width: 630px) {
+  .Catalog__ {
+    &container {
+      display: flex;
+      justify-content: center;
+      
+    }
+    &title {
+      display: flex;
+      flex-direction: column;
+      margin-top: 50px;
+      font-size: 30px;
+      text-align: center;
+      justify-content: center;
+    }
+    &product {
+      &-container {
+        justify-content: center;
+        margin-top: 120px;
+        margin-left: 3%;
+      }
+      &-content-container {
+        display: block;
+        justify-content: space-around;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-top: 50px;
+      }
+    }
+  }
+}
 
+@media (max-width: 360px) {
+  .Catalog__ {
+    &container {
+      display: flex;
+      justify-content: center;
+    }
+    &title {
+      display: flex;
+      flex-direction: column;
+      font-size: 30px;
+      text-align: center;
+      justify-content: center;
+    }
+    &product {
+      &-container {
+        justify-content: center;
+        margin-top: 70px;
+      }
+      &-content-container {
+        display: block;
+        justify-content: space-around;
+        margin-left: 5%;
+        margin-right: 5%;
+        margin-top: 50px;
+      }
+    }
+  }
+}
