--- a/src/components/catalog/product/Product.scss
+++ b/src/components/catalog/product/Product.scss
@@ -5,7 +5,6 @@
   &title {
     @include DTMedium;
     margin-top: 32px;
-    
   }
   &description {
     @include DTSmall;
@@ -18,5 +17,32 @@
 }
 
 
-  
+@media (max-width: 1100px) {
+  .product__ {
+    &card {
+    padding-right: 50px;
+    }
+    &description, &title, &price {
+      margin-left: 10%;
+    }
+    
+  }
+}
 
+@media (max-width: 630px) {
+  .product__ {
+    &card {
+    padding-right: 2%;
+    }
+    &img{
+      width: 100%;
+    }
+    &title {
+      margin-top: 0px;
+    }
+    &description, &title, &price {
+      margin-left: 10%;
+    }
+    
+  }
+}
