--- a/src/components/gallery/Gallery.scss
+++ b/src/components/gallery/Gallery.scss
@@ -9,45 +9,51 @@
     color: #292929;
     margin-top: 120px;
   }
-  &category-container {
-    margin-top: 64px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-  &container-img {
-    display: flex;
-    justify-content: center;
+  &category {
+    &-container {
+      margin-top: 64px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+    }
+    &-img {
+      display: block;
+     
+    }
   }
 }
 
 @media (max-width: 1100px) {
   .gallery__ {
-    &title{
-        display: flex;
-        justify-content: center;
+    &container{
+      margin-left: -10%;
+    }
+    &title {
+      display: flex;
+      justify-content: center;
+     
     }
     &category-container {
-      max-width: 900px;
-      margin-left: 20px;
-      margin-right: 20px;
+      max-width: 90%;
     }
   }
 }
-@media (max-width: 450px) {
-    .gallery__ {
-      &title{
-          display: flex;
-          justify-content: center;
-          margin-left: 25%;
-      }
-      &category-container {
-        max-width: 400px;
-        margin-left: 20px;
-        margin-right: 20px;
-      }
+
+@media (max-width: 630px) {
+  .gallery__ {
+    &title {
+      display: flex;
+      justify-content: center;
+      font-size: 30px;
+    }
+    &category-container {
+      max-width: 90%;
+      margin-left: 10%;
+      margin-right: 10%;
+      
     }
   }
+}
