--- a/src/components/gallery/category/Category.scss
+++ b/src/components/gallery/category/Category.scss
@@ -5,10 +5,10 @@
   &img-container {
     display: flex;
     margin-top: 64px;
+    gap: 24px;
+    padding-inline: 20px;
   }
-  &img1 {
-    margin-right: 24px;
-  }
+
   &description {
     font-family: Inter;
     font-size: 24px;
@@ -22,63 +22,45 @@
 }
 
 @media (max-width: 1100px) {
-    .Category__ {
-        &container{
-            margin-left: auto;
-            margin-right: auto;
-        }
-      &img-container {
-        max-width: 800px;
-        margin-left: 20px;
-        margin-right: 20px;
-      }
-      &img1, &img2{
-        max-height: 250px;
-      }
-      &description{
-        margin-left: 20px;
-      }
+  .Category__ {
+    &container {
+      margin-inline: 5%;
+    }
+    &img {
+      min-width: 20%;
+      max-width: 60%;
+    }
+    &img-container {
+      display: flex;
+    }
+    &description {
+      margin-left: 20px;
     }
   }
+}
 
-  @media (max-width: 770px) {
-    .Category__ {
-        &container{
-            margin-left: auto;
-            margin-right: auto;
-        }
-      &img-container {
-        max-width: 500px;
-        margin-left: 20px;
-        margin-right: 20px;
-      }
-      &img1, &img2{
-        max-height: 150px;
-      }
-      &description{
-        margin-left: 20px;
-      }
+@media (max-width: 630px) {
+  .Category__ {
+    &container {
+      max-width: 80%;
+    }
+    &img {
+      min-width: 20%;
+      max-width: 60%;
+      min-height: 20%;
+      max-height: 60%;
+    }
+    &img1 {
+      margin-right: 5px;
+    }
+    &img-container {
+      display: flex;
+      padding: 0;
+     margin-top: 5px;
+    }
+    &description {
+      margin-left: 10px;
+      font-size: 15px;
     }
   }
-
-  @media (max-width: 450px) {
-    .Category__ {
-        &container{
-            margin-left: auto;
-            margin-right: auto;
-        }
-      &img-container {
-        max-width: 300px;
-        margin-left: 20px;
-        margin-right: 20px;
-      }
-      &img1, &img2{
-        max-height: 100px;
-      }
-      &description{
-        margin-left: 20px;
-      }
-    }
-  }
-  
-  
+}
