--- a/src/components/gallery/category/Category.scss
+++ b/src/components/gallery/category/Category.scss
@@ -49,6 +49,7 @@
       max-width: 60%;
       min-height: 20%;
       max-height: 60%;
+      margin-top: 10px;
     }
     &img1 {
       margin-right: 5px;
@@ -59,6 +60,7 @@
      margin-top: 5px;
     }
     &description {
+      margin-top: 0;
       margin-left: 10px;
       font-size: 15px;
     }
