--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,4 +1,3 @@
-
 @import "../styles/mixins.scss";
 @import "../styles/variables.scss";
 
@@ -13,7 +12,7 @@
     &-menu {
       height: 12px;
       width: 18px;
-
+      transition: background-image 0.2s ease-in-out;
       background-image: url("../img/menu.png");
       background-repeat: no-repeat;
       &:hover {
@@ -27,7 +26,6 @@
     &container {
       height: 500px;
       background-position: top 0px left -250px;
-
     }
     &top {
       &-box {
@@ -70,7 +68,7 @@
         line-height: 32px;
         letter-spacing: -1.5px;
         text-align: left;
-        
+
         margin-left: 20px;
         margin-top: 20px;
       }
@@ -130,25 +128,22 @@
   }
 }
 
-
 @media (min-width: 1040px) {
   .header__ {
     &container {
       position: relative;
-       top: -10px;
+      top: -10px;
       height: 100%;
       background-position: center;
       background-size: 100%;
     }
     &top {
       &-box {
-       
         display: flex;
         justify-content: space-between;
       }
       &-logo {
         padding-left: 120px;
-       
       }
     }
     &bottom {
@@ -175,20 +170,18 @@
   .header__ {
     &container {
       position: relative;
-       top: -10px;
+      top: -10px;
       height: 100%;
       background-position: center;
       background-size: 100%;
     }
     &top {
       &-box {
-       
         display: flex;
         justify-content: space-between;
       }
       &-logo {
         padding-left: 120px;
-       
       }
     }
     &bottom {
