--- a/src/components/gallery/Gallery.scss
+++ b/src/components/gallery/Gallery.scss
@@ -21,23 +21,29 @@
     }
     &-img {
       display: block;
-     
     }
   }
 }
 
 @media (max-width: 1100px) {
   .gallery__ {
-    &container{
+    &container {
       margin-left: -10%;
     }
     &title {
       display: flex;
       justify-content: center;
-     
+      margin-left: 9%;
+      font-size: 30px;
     }
-    &category-container {
-      max-width: 90%;
+    &category {
+      &-container {
+        max-width: 90%;
+        margin-top: 20px;
+      }
+      &-img{
+        margin-left: 9%;
+      }
     }
   }
 }
@@ -47,13 +53,18 @@
     &title {
       display: flex;
       justify-content: center;
-      font-size: 30px;
+      font-size: 25px;
     }
-    &category-container {
-      max-width: 90%;
-      margin-left: 10%;
-      margin-right: 10%;
-      
+    &category {
+      &-container {
+        max-width: 90%;
+        margin-left: 10%;
+        margin-right: 10%;
+        margin-top: 10px;
+      }
+      &-img {
+        margin-left: 9%;
+      }
     }
   }
 }
